tests/NormalTests/paczka1/fuzzy1/66644353.err
Error in line 6: qPP5UpfP A964 9,7
Error in line 10: pV7IiA9 S372 78,9
Error in line 13: A260 S377 74,3
Error in line 21: A260 A260 88,2
Error in line 19: pV7IiA9 S377 4,1
Error in line 23: A260 S372 74,0
Error in line 25: A260 A260 34,9
Error in line 8: qPP5UpfP S372 62,7
